--- a/DSS_metadata/VIPS.yaml
+++ b/DSS_metadata/VIPS.yaml
@@ -54,7 +54,7 @@ models:
     geoJSON: |-
       {}
   input:
-   weather: 
+   weather_parameters: 
    - parameter_code: 1002 # = Mean air temp at 2m
      interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
   execution: 
@@ -135,7 +135,7 @@ models:
     geoJSON: |-
       {}
   input:
-   weather: 
+   weather_parameters: 
    - parameter_code: 1002 # = Mean air temp at 2m
      interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
    - parameter_code: 1112 # Mean soil temp at 10cm depth
@@ -229,7 +229,7 @@ models:
     geoJSON: |-
       {}
   input:
-   weather: 
+   weather_parameters: 
    - parameter_code: 1002 # = Mean air temp at 2m
      interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
    - parameter_code: 1112 # Mean soil temp at 10cm depth
@@ -534,7 +534,7 @@ models:
     geoJSON: |-
       {}
   input:
-   weather: # TODO: weather parameter codes, frequency codes and unit codes
+   weather_parameters: # TODO: weather parameter codes, frequency codes and unit codes
    - parameter_code: 1002 # = Mean temp at 2m measured in Celcius.
      interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
    - parameter_code: 2001 # Precipitation measured in mm. 
@@ -609,7 +609,7 @@ models:
     geoJSON: |-
       {}
   input:
-   weather: # TODO: weather parameter codes, frequency codes and unit codes
+   weather_parameters: # TODO: weather parameter codes, frequency codes and unit codes
    - parameter_code: 1002 # = Mean temp at 2m measured in Celcius.
      interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
    - parameter_code: 3101  # Leaf wetness duration. Measured in minutes with wetness per period 
@@ -676,7 +676,7 @@ models:
     geoJSON: |-
       {}
   input:
-   weather: # TODO: weather parameter codes, frequency codes and unit codes
+   weather_parameters: # TODO: weather parameter codes, frequency codes and unit codes
    - parameter_code: 1002 # = Mean temp at 2m measured in Celcius.
      interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
    - parameter_code: 2001  # Precipitation
@@ -762,7 +762,7 @@ models:
     geoJSON: |-
       {}
   input:
-   weather: # TODO: weather parameter codes, frequency codes and unit codes
+   weather_parameters: 
    - parameter_code: 3101  # Leaf wetness duration. Measured in minutes with wetness per period 
      interval: 3600
    - parameter_code: 1002 # = Mean temp at 2m measured in Celcius.
@@ -864,7 +864,7 @@ models:
     geoJSON: |-
       {}
   input:
-   weather: 
+   weather_parameters: 
    - parameter_code: 1002 # = Mean air temp at 2m
      interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
   execution: 
