--- a/DSS_metadata/VIPS.yaml
+++ b/DSS_metadata/VIPS.yaml
@@ -68,6 +68,8 @@ models:
     endpoint: https://coremanager.vips.nibio.no/models/PSILARTEMP/run/ipmd
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
+    input_schema_hidden_properties:
+      - modelId
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
     input_schema: |
       {
@@ -158,6 +160,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
@@ -260,6 +264,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
@@ -331,6 +337,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
@@ -453,6 +461,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
@@ -579,6 +589,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
@@ -654,6 +666,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
@@ -729,6 +743,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
@@ -826,6 +842,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
@@ -925,6 +943,8 @@ models:
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
     # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema_hidden_properties:
+      - modelId
     input_schema: |
       {
         "type":"object",
