--- a/weather_data/Weather_data_sources.yaml
+++ b/weather_data/Weather_data_sources.yaml
@@ -38,6 +38,220 @@ datasources:
        - 3001 # Instantaneous RH at 2m (%)
        - 2001 # Precipitation (mm)
        - 4002 # Instantaneous wind speed at 2m
+  - 
+    name: "Deutsche Wetterdienst location forecast by IPM Decisions"
+    description: "27 hour weather forecasts for Germany and surrounding areas. 2.5 km resolution. Pulls data from DWD's Open Data server (https://www.dwd.de/EN/ourservices/opendata/opendata.html). Made available by a custom adapter created by Met Norway and NIBIO."
+    public_URL: "https://github.com/H2020-IPM-Decisions/Location-Weather-Adapter-DWD"
+    organization: 
+      name: The Norwegian Meteorological Institute
+      country: Norway
+      address: Postboks 43 Blindern
+      postal_code: "0371"
+      city: Oslo
+      email: david.melchior@met.no
+      url: https://www.met.no/en
+    endpoint: https://ipmdecisions.nibio.no/weatherdata/dwd/
+    needs_data_control: false
+    temporal:
+      historic: #  
+        start: null # Start == null => No measured/historic/observational data
+        end: null #null => Recent data available (continuously updated) UNLESS OF COURSE start == null
+      forecast: 1 # 0 = no forecast. All other positive integers indicate the number of days ahead
+    access_type: location
+    spatial: 
+      # Using country codes to get GeoJSON. Saves a lot of duplication.
+      # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+      # e.g.
+      # - NOR
+      # - SWE
+      countries: null
+      # "Sphere" simply means the whole globe (NOT part of GEOJson spec!)
+      geoJSON: |- 
+        {
+        "type": "FeatureCollection",
+        "features": [
+          {
+            "type": "Feature",
+            "properties": {},
+            "geometry": {
+              "type": "Polygon",
+              "coordinates": [
+                [
+                  [
+                    -0.20,
+                    43.18
+                  ],
+                  [
+                    17.68,
+                    43.36
+                  ],
+                  [
+                    20.32,
+                    57,58
+                  ],
+                  [
+                    -3.8,
+                    57.22
+                  ],
+                  [
+                    -0.20,
+                    43.18
+                  ]
+                ]
+              ]
+            }
+          }
+         ]
+        }
+    parameters:
+      common:
+       - 1001 # Instantaneous temperature at 2m (Celcius)
+       - 3001 # Instantaneous RH at 2m (%)
+       - 2001 # Precipitation (mm)
+       - 4002 # Instantaneous wind speed at 2m
+  - 
+    name: "Deutsche Wetterdienst EU Area location forecast by IPM Decisions"
+    description: "30 hour weather forecasts for EU. 7 km resolution. Pulls data from DWD's Open Data server (https://www.dwd.de/EN/ourservices/opendata/opendata.html). Made available by a custom adapter created by Met Norway and NIBIO."
+    public_URL: "https://github.com/H2020-IPM-Decisions/Location-Weather-Adapter-DWD-EU"
+    organization: 
+      name: The Norwegian Meteorological Institute
+      country: Norway
+      address: Postboks 43 Blindern
+      postal_code: "0371"
+      city: Oslo
+      email: david.melchior@met.no
+      url: https://www.met.no/en
+    endpoint: https://ipmdecisions.nibio.no/weatherdata/dwd-eu/
+    needs_data_control: false
+    temporal:
+      historic: #  
+        start: null # Start == null => No measured/historic/observational data
+        end: null #null => Recent data available (continuously updated) UNLESS OF COURSE start == null
+      forecast: 1 # 0 = no forecast. All other positive integers indicate the number of days ahead
+    access_type: location
+    spatial: 
+      # Using country codes to get GeoJSON. Saves a lot of duplication.
+      # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+      # e.g.
+      # - NOR
+      # - SWE
+      countries: null
+      # "Sphere" simply means the whole globe (NOT part of GEOJson spec!)
+      geoJSON: |- 
+        {
+        "type": "FeatureCollection",
+        "features": [
+          {
+            "type": "Feature",
+            "properties": {},
+            "geometry": {
+              "type": "Polygon",
+              "coordinates": [
+                [
+                  [
+                    -23.3125,
+                    29.5625
+                  ],
+                  [
+                    45.0,
+                    29.5625
+                  ],
+                  [
+                    45.0,
+                    70.3125
+                  ],
+                  [
+                    -23.3125,
+                    70.3125
+                  ],
+                  [
+                    -23.3125,
+                    29.5625
+                  ]
+                ]
+              ]
+            }
+          }
+         ]
+        }
+    parameters:
+      common:
+       - 1001 # Instantaneous temperature at 2m (Celcius)
+       - 3001 # Instantaneous RH at 2m (%)
+       - 2001 # Precipitation (mm)
+       - 4002 # Instantaneous wind speed at 2m
+  - 
+    name: "MeteoFrance location forecast by IPM Decisions"
+    description: "40 hour weather forecasts for France and surroundings. 2.5 km resolution. Pulls data from MeteoFrance's Public Data service (https://donneespubliques.meteofrance.fr). Made available by a custom adapter created by Met Norway and NIBIO."
+    public_URL: "https://github.com/H2020-IPM-Decisions/Location-Weather-Adapter-MeteoFrance"
+    organization: 
+      name: The Norwegian Meteorological Institute
+      country: Norway
+      address: Postboks 43 Blindern
+      postal_code: "0371"
+      city: Oslo
+      email: david.melchior@met.no
+      url: https://www.met.no/en
+    endpoint: https://ipmdecisions.nibio.no/weatherdata/meteofrance/
+    needs_data_control: false
+    temporal:
+      historic: #  
+        start: null # Start == null => No measured/historic/observational data
+        end: null #null => Recent data available (continuously updated) UNLESS OF COURSE start == null
+      forecast: 2 # 0 = no forecast. All other positive integers indicate the number of days ahead
+    access_type: location
+    spatial: 
+      # Using country codes to get GeoJSON. Saves a lot of duplication.
+      # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+      # e.g.
+      # - NOR
+      # - SWE
+      countries: null
+      # "Sphere" simply means the whole globe (NOT part of GEOJson spec!)
+      geoJSON: |- 
+        {
+        "type": "FeatureCollection",
+        "features": [
+          {
+            "type": "Feature",
+            "properties": {},
+            "geometry": {
+              "type": "Polygon",
+              "coordinates": [
+                [
+                  [
+                    -7.72,
+                    37.52
+                  ],
+                  [
+                    12.12,
+                    37.52
+                  ],
+                  [
+                    16.0,
+                    54.48
+                  ],
+                  [
+                    -11.8,
+                    54.48
+                  ],
+                  [
+                    -7.72,
+                    37.52
+                  ]
+                ]
+              ]
+            }
+          }
+         ]
+        }
+    parameters:
+      common:
+       - 1001 # Instantaneous temperature at 2m (Celcius)
+       - 3001 # Instantaneous RH at 2m (%)
+       - 2001 # Precipitation (mm)
+       - 4002 # Instantaneous wind speed at 2m
+
   -
     name: "FMI weather forecasts"
     description: "36 hour forecasts for Finland from the Finnish Meteorological Institute"
