--- a/DSS_metadata/VIPS.yaml
+++ b/DSS_metadata/VIPS.yaml
@@ -190,26 +190,57 @@ models:
       Yellow warning indicates that the flight period is beginning and that the first oviposition is close. Check for eggs in the field.
       Red warning indicates that it is likely that oviposition has begun. The requirement for the flight period has been reached.
       Grey warning indicates that the flight period of the 1st generation is over and the warning has ended.
+    ### Experimental field!!! (adding chart parameters)
     result_parameters:
       # the id is used with the model_id as the namespace
       - id: TMDD4C
         title: Accumulated air temperature day degrees 
         description: The accumulated soil temperature day degrees with a base temperature of 4 degrees celcius
+        chart_info:
+          default_visible: true
+          unit: "&deg;C"
+          type: spline # Could be  line, spline, area, areaspline, column and scatter. Ref https://www.highcharts.com/docs/chart-and-series-types/chart-types
+          color: "#0066ff"
       - id: TJM10DD4C
         title: Accumulated soil temperature day degrees 
         description: The accumulated soil temperature day degrees with a base temperature of 4 degrees celcius
+        chart_info:
+          default_visible: false
+          unit: "&deg;C"
+          type: spline 
+          color: "#00ccff"
       - id: TMDD4CLT
         title: Lower threshold value for TMDD4C
         description: When this threshold is reached, the flight period is beginning and the first oviposition is close
+        chart_info:
+          default_visible: true
+          unit: "&deg;C"
+          type: spline 
+          color: "#ffff00"
       - id: TMDD4CUT
         title: Upper threshold value for TMDD4C
         description: When this threshold is reached, it is likely that oviposition has begun.
+        chart_info:
+          default_visible: true
+          unit: "&deg;C"
+          type: spline 
+          color: "#ff0000"
       - id: TJM10DD4CLT
         title: Lower threshold value for TJM10DD4C
         description: When this threshold is reached, the flight period is beginning and the first oviposition is close
+        chart_info:
+          default_visible: false
+          unit: "&deg;C"
+          type: spline 
+          color: "#ff9900"
       - id: TJM10DD4CUT
         title: Upper threshold value for TJM10DD4C
         description: When this threshold is reached, it is likely that oviposition has begun.
+        chart_info:
+          default_visible: false
+          unit: "&deg;C"
+          type: spline 
+          color: "#990000"
 ##
 - name: Cabbage moth model
   id: MAMESTRABR
@@ -413,7 +444,7 @@ models:
     organization: NIBIO
   pests: 
   - HYLERA # EPPO code for Cabbage root fly (Delia radicum)
-  - HYLEFLO # EPPO code for turnip fly (Delia floralis)
+  - HYLEFL # EPPO code for turnip fly (Delia floralis)
   crops:
   - BROSL # EPPO code for cabbage (head cabbage, Brassica oleracea var. capitata)
   - BRSOB # EPPO code for cauliflower (Brassica oleracea var. botrytis)
@@ -454,7 +485,7 @@ models:
    field_observation:
     species: 
     - HYLERA # EPPO Code for the disease
-    - HYLEFLO
+    - HYLEFL
   execution: 
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/DELIARFOBS/run/ipmd
